objects/HS_ServiceProgram__c.object
<CustomObject>
    <fields>
        <fullName>MER_CLASS_DESC__c</fullName>
        <description>Enter MER_CLASS_DESC</description>
        <inlineHelpText>Enter MER_CLASS_DESC</inlineHelpText>
        <label>MER_CLASS_DESC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MER_CLASS_NBR__c</fullName>
        <description>Enter MER_CLASS_NBR</description>
        <inlineHelpText>Enter MER_CLASS_NBR</inlineHelpText>
        <label>MER_CLASS_NBR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MER_DEPT_NBR__c</fullName>
        <description>Enter MER_DEPT_NBR</description>
        <inlineHelpText>Enter MER_DEPT_NBR</inlineHelpText>
        <label>MER_DEPT_NBR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MER_SUB_CLASS_DESC__c</fullName>
        <description>Enter MER_SUB_CLASS_DESC</description>
        <inlineHelpText>Enter MER_SUB_CLASS_DESC</inlineHelpText>
        <label>MER_SUB_CLASS_DESC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MER_SUB_CLASS_NBR__c</fullName>
        <description>Enter MER_SUB_CLASS_NBR</description>
        <inlineHelpText>Enter MER_SUB_CLASS_NBR</inlineHelpText>
        <label>MER_SUB_CLASS_NBR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPM_Service_Program_ID__c</fullName>
        <description>SPM Service Program ID</description>
        <displayFormat>SPRG-{00000}</displayFormat>
        <inlineHelpText>SPM Service Program ID</inlineHelpText>
        <label>SPM Service Program ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SUMMARY_PROGRAM_NAME__c</fullName>
        <description>Enter SUMMARY PROGRAM NAME</description>
        <inlineHelpText>Enter SUMMARY PROGRAM NAME</inlineHelpText>
        <label>SUMMARY PROGRAM NAME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SUMMARY_PROGRAM_NAME__c</columns>
        <columns>MER_DEPT_NBR__c</columns>
        <columns>MER_CLASS_NBR__c</columns>
        <columns>MER_SUB_CLASS_NBR__c</columns>
        <columns>MER_CLASS_DESC__c</columns>
        <columns>MER_SUB_CLASS_DESC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HS_Service_Programs_All_View</fullName>
        <columns>NAME</columns>
        <columns>SUMMARY_PROGRAM_NAME__c</columns>
        <columns>MER_DEPT_NBR__c</columns>
        <columns>MER_CLASS_NBR__c</columns>
        <columns>MER_SUB_CLASS_NBR__c</columns>
        <columns>MER_CLASS_DESC__c</columns>
        <columns>MER_SUB_CLASS_DESC__c</columns>
        <filterScope>Everything</filterScope>
        <label>HS Service Programs - All View</label>
    </listViews>
</CustomObject>